<resources>
    <string name="app_name">GAS</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Uploading a New Session</string>
    <string name="second">View Sessions Analysis</string>
    <string name="previous">Back>></string>
    <string name="Begin">Connect Devices</string>
    <string name="send">Uploading</string>
    <string name="stop">Disconect</string>
    <string name="hello_first_fragment">Welcome to GAS App!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>