<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#FFF9FB"
tools:context=".UploadingData">


<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.GAS.AppBarOverlay"
    tools:ignore="MissingConstraints">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#E91E63"
        app:popupTheme="@style/Theme.GAS.PopupOverlay"
        app:subtitle="@string/app_name"

        />
</com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/button_second"
        android:layout_width="118dp"
        android:layout_height="43dp"
        android:onClick="onClickBack"
        android:text="@string/previous"
        app:backgroundTint="#E91E63"
        app:icon="@android:drawable/ic_media_rew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />



<Button
    android:id="@+id/buttonStart"
    android:layout_width="304dp"
    android:layout_height="44dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_marginStart="135dp"
    android:layout_marginLeft="135dp"
    android:layout_marginTop="190dp"
    android:layout_marginEnd="104dp"
    android:layout_marginRight="104dp"
    android:layout_marginBottom="32dp"
    android:onClick="onClickStart"
    android:text="@string/Begin"
    android:textColor="#FFFFFF"
    app:backgroundTint="#E91E63"
    app:layout_constraintBottom_toTopOf="@+id/buttonSend"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.606"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0" />

<Button
    android:id="@+id/buttonSend"
    android:layout_width="300dp"
    android:layout_height="48dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:layout_toEndOf="@+id/buttonStart"
    android:layout_toRightOf="@+id/buttonStart"
    android:onClick="onClickSend"
    android:text="@string/send"
    android:textColor="#FFFFFF"
    android:textStyle="bold"
    app:backgroundTint="#E91E63"
    app:layout_constraintBottom_toTopOf="@+id/textView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.495"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/buttonStart" />

<Button
    android:id="@+id/buttonStop"
    android:layout_width="113dp"
    android:layout_height="39dp"
    android:layout_marginStart="32dp"
    android:layout_marginLeft="32dp"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="49dp"
    android:layout_toEndOf="@+id/buttonSend"
    android:layout_toRightOf="@+id/buttonSend"
    android:onClick="onClickStop"
    android:text="@string/stop"
    android:textColor="#FFFFFF"
    android:textStyle="bold"
    app:backgroundTint="#E91E63"
    app:iconTint="#E91E63"
    app:layout_constraintBottom_toTopOf="@+id/textView"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.034" />

<Button
    android:id="@+id/buttonClear"
    android:layout_width="104dp"
    android:layout_height="38dp"
    android:layout_marginTop="100dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="20dp"
    android:layout_toEndOf="@+id/buttonStop"
    android:layout_toRightOf="@+id/buttonStop"
    android:onClick="onClickClear"
    android:text="Clear"
    android:textColor="#FFFFFF"
    app:backgroundTint="#E91E63"
    app:layout_constraintBottom_toTopOf="@+id/textView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toEndOf="@+id/buttonStop"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.03" />

<TextView
    android:id="@+id/textView"
    android:layout_width="287dp"
    android:layout_height="179dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:background="#FBEDED"
    android:textColor="#000000"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.476"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/buttonSend" />



</androidx.constraintlayout.widget.ConstraintLayout>




